# gesetze-crawler

./: README.md  pyproject.toml
src/gesetze_crawler/: __init__.py  __main__.py  gesetze_im_internet_crawler.py  wayback_machine_crawler.py
tests/: conftest.py  test_gesetze_im_internet_crawler.py  test_wayback_machine_crawler.py
